# sensor-suricata-client-rust

./: Cargo.toml  Dockerfile  Dockerfile.alpine  Dockerfile.distroless  README.md  build.rs
.github/workflows/: docker-publish.yml
src/: client.rs  config.rs  lib.rs  listener.rs  main.rs  processor.rs  queue.rs  types.rs
tests/: json_parsing.rs
