[package]
name = "sensor-suricata-service-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
tonic = { version = "0.10", features = ["tls"] }
prost = "0.12"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "net", "io-util", "sync"] }
tokio-stream = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.4", features = ["derive"] }
config = "0.13"
anyhow = "1.0"
log = "0.4"
env_logger = "0.10"
sha2 = "0.10"
hex = "0.4"
dashmap = "5.5"
async-stream = "0.3"
tikv-jemallocator = "0.5"
simd-json = "0.13"

[build-dependencies]
tonic-build = "0.10"

[profile.release]
lto = true
codegen-units = 1
